2010-02-16  Olaf Lenz  <olenz@qwghlm>

	* pbctools.tcl: Fixed email address of olenz.
	* pbcwrap.tcl: Added compound type "fragment".

2009-11-04  Olaf Lenz  <olenz@qwghlm>

	* pbcset.tcl: Incorporated Jan Saams commits to the VMD CVS, log
	message:
	Fixed a bug reported by Olaf Lenz:
	> % pbc readxst kiley.xst -alignx
	> atomselection move:: need a 4x4 matrix
	Now xst files containing PBC vectors that don't follow the
	standard alignment (A||x, B in x-y plane) are read and the
	molecule is aligned accordingly when using -alignx option.
	Fixed indentation in a few places.

2009-10-09  Olaf Lenz  <lenzo@pckr97.mpip-mainz.mpg.de>

	* doc/pbctools.tex (subsection{\texttt{set}}): Fixed small error
	in the documentation of "pbc set", thanks to Axel Kohlmeier and
	Lan He.

2009-06-26  Olaf Lenz  <lenzo@pckr97.mpip-mainz.mpg.de>

	* doc/pbctools.tex: Added note that -centersel only has an effect
	when -center bb/com is used. Thanks to Alberto Sergio Saray.

2009-05-14  Olaf Lenz  <olenz@qwghlm>

	* pbctools.tcl: Applied Axel Kohlmeyer's docfix patch.

	* doc/pbctools.tex: Restructured introduction, abstract and basic
	usage section.

	* pbcjoin.tcl (pbcjoin): Added option "-[no]border", which allows
	to specify the maximal depth were atoms of a broken compound can
	be found inside the unit cell. Currently works only for orthorhombic
	unit cells.

	* pbcwrap.tcl (pbcwrap): "-center" now understands a selection as
	argument again, for backward compatibility. However, a deprecation
	warning is printed.

2009-05-11  Olaf Lenz  <olenz@qwghlm>

	* pbcjoin.tcl (pbcjoin): Some more improvements, added more
	detailed progress report.

2009-04-30  Olaf Lenz  <lenzo@pckr97.mpip-mainz.mpg.de>

	* pbcjoin.tcl (pbcjoin): Some more improvements to "pbc
	join". Im my tests, I got a performance gain of about 50%.

2009-04-23  Olaf Lenz  <olenz@qwghlm>

	* pbcjoin.tcl: Thanks to Dan Lussier: significantly reduced memory
	footprint of "pbc join".

2009-02-10  Olaf Lenz  <olenz@true>
