@@ -1,6 +1,16 @@
+2010-04-21  Olaf Lenz  <lenzo@pckr97.mpip-mainz.mpg.de>
+
+	* pbcwrap.tcl: Reintroduced Tcl code (get_connected) to determine
+	connected compounds that contain all atoms that are
+	connected ("fragment" only does this if all atoms are in the same
+	segment and chain).
+	
+	* pbcjoin.tcl: Added compound type "connected". Extended verbosity.
+
 2010-02-16  Olaf Lenz  <olenz@qwghlm>
 
 	* pbctools.tcl: Fixed email address of olenz.
+	
 	* pbcwrap.tcl: Added compound type "fragment".
 
 2009-11-04  Olaf Lenz  <olenz@qwghlm>
